--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
     "jest": "^26.6.3",
     "markdownlint-cli": "^0.28.1",
     "prettier": "^2.2.1"
+  },
+  "dependencies": {
+    "study-lenses": "^0.0.179"
   }
 }
